--- a/teanicorns-art-trade-bot/teanicorns-art-trade-bot.csproj
+++ b/teanicorns-art-trade-bot/teanicorns-art-trade-bot.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.0.1" />
-    <PackageReference Include="Google.Apis.Drive.v3" Version="1.40.0.1587" />
+    <PackageReference Include="Discord.Net" Version="2.2.0" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.45.0.1922" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
